# kwin-blishhud-shader

./: .gitignore  CMakeLists.txt  README.org  blishhud_shader.cpp  blishhud_shader.h  metadata.json  plugin.cpp
data/: transparent_black_core.frag
